Put chart height in the CSS to prevent flickering when loading a stats page  - Legacy-Id: 12868

--- a/ietf/static/ietf/css/ietf.css
+++ b/ietf/static/ietf/css/ietf.css
@@ -573,6 +573,10 @@ table.simple-table td:last-child {
   text-indent: -1em;
 }
 
+.document-stats #chart {
+  height: 25em;
+}
+
 .stats-time-graph {
   height: 15em;
 }
